# character_a2a_collection

./: .gitignore  README.md  conftest.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
apps/: __init__.py
apps/textgame/: __init__.py  background.py  gm.py  main.py  mock.py  orchestrator.py  role.py  session.py  store.py
apps/textgame/characters/: _schema.md  alice.md  alice.yaml  bob.md  bob.yaml  cara.md  cara.yaml  mio.md  mio.yaml
apps/textgame/frontend/: index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
apps/textgame/frontend/src/: App.tsx  api.ts  index.css  types.ts  useSession.ts
apps/textgame/frontend/src/components/: CharacterEditor.tsx  ControlBar.tsx  ConversationStream.tsx  LatencyPanel.tsx  RoleSidebar.tsx  SessionHistory.tsx  TracePanel.tsx
apps/textgame/server/: __init__.py  app.py  characters_api.py  latency.py  sessions.py  sessions_api.py  ws.py
config/: config.example.yaml
docs/: DESIGN.md  FRONTEND_PLAN.md
seed21pro/: __init__.py  client.py  types.py
seedcore/: __init__.py  client.py  config.py  trace.py  types.py
seedream/: __init__.py  client.py  types.py
tests/apps/textgame/: test_background.py  test_gm.py  test_latency.py  test_orchestrator.py  test_role.py  test_server_api.py  test_session_control.py  test_store.py
tests/base/: test_client.py  test_config.py  test_seed21pro.py  test_seedream.py  test_trace.py
