[project]
name = "seed-sc"
version = "0.1.0"
description = "Seed character 测试工程：底座 SDK (seedcore) + 上层工程 (apps/)"
requires-python = ">=3.9"
dependencies = [
    "pyyaml>=6.0",
    # 方舟调用走标准库 urllib 的 OpenAI 兼容 REST 接口，无需额外 SDK。
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "base: 底座 SDK 测试（mock 掉网络）",
    "apps: 上层工程测试",
]
